# icub_description

./: CMakeLists.txt  README.md  package.xml
launch/: icub.launch  icub_sim.launch
rviz/: display_urdf.rviz
src/: icub_tf_publisher.cpp
urdf/: icub.xml
yarp_ros_bridge/: CMakeLists.txt
yarp_ros_bridge/include/: geometry_msgs_Point.h  geometry_msgs_Pose.h  geometry_msgs_Quaternion.h  sensor_msgs_JointState.h
yarp_ros_bridge/src/: icub_state_publisher.cpp
